# gputools

./: DESCRIPTION  INSTALL  MD5  NAMESPACE  NEWS  cleanup  configure  configure.ac
R/: RcppExports.R  chooseGpu.R  fake.R  getGpuId.R  gpuCor.R  gpuFastICA.R.in  gpuGranger.R  gpuHclust.R  gpuLm.R  gpuMatMult.R  gpuMi.R  gpuQr.R  gpuSolve.R  gpuSvd.R.in  gpuSvm.R.in  hooks.R  zzz.R
autom4te.cache/: output.0  requests  traces.0
inst/cuda/: correlation.cu  distance.cu  granger.cu  hcluster.cu  kendall.cu  mi.cu  qrdecomp.cu
man/: chooseGpu.Rd  cpuMatMult.Rd  getAucEstimate.Rd  getGpuId.Rd  gpuCor.Rd  gpuCrossprod.Rd  gpuDist.Rd  gpuDistClust.Rd  gpuFastICA.Rd  gpuGlm.Rd  gpuGranger.Rd  gpuHclust.Rd  gpuLm.Rd  gpuLm.defaultTol.Rd  gpuLm.fit.Rd  gpuLsfit.Rd  gpuMatMult.Rd  gpuMi.Rd  gpuQr.Rd  gpuSolve.Rd  gpuSvd.Rd  gpuSvmPredict.Rd  gpuSvmTrain.Rd  gpuTcrossprod.Rd  gpuTtest.Rd
src/: Makefile  Makefile.in  Makevars.in  RcppExports.cpp  classification.cu  classification.h  config.mk  correlation.cpp  correlation.cu  correlation.h  cudaKernels.cpp  cudaKernels.h  cudaUtils.cpp  cudaUtils.cu  cudaUtils.h  cuseful.cpp  cuseful.cu  cuseful.h  distance.cpp  distance.cu  distance.h  granger.cpp  granger.cu  granger.h  hcluster.cpp  hcluster.cu  hcluster.h  ica.c  ica.h  kendall.cpp  kendall.cu  kendall.h  lr.cu  lr.h  lsfit.cpp  lsfit.cu  lsfit.h  matmult.cu  matmult.h  mi.cpp  (+13 more)
